# vlog

./: .env.example  .gitignore  .skillportrc  AGENTS.md  README.md  Taskfile.yaml  bootstrap.ps1  config.yaml  prompts.yaml  pyproject.toml  ruff_errors.txt  run.bat  run.cmd  run.ps1  run_silent.vbs  vlog-daily.service  vlog-daily.timer  vlog.service
.agent/workflows/: agentic-optimization.md  git.md  vlog-log-repair.md  vlog-maintenance.md  vlog-process-all.md
.claude/: CLAUDE.md  settings.json
.claude/rules/: autonomous_maintenance.md  commands.md  general.md  model_protection.md  python_coding.md
.github/workflows/: lint.yml
.serena/: project.yml
data/: cognee_queue.yaml  config.yaml  prompts.yaml  tasks.json
docs/: DAILY_MONITORING.md  MAINTENANCE.md  architecture.md  coding_rules.md  coding_rules_dashboard.html  customer_journey.md  image.md  image_generation.md  whisper_comparison.md
docs/adr/: 0001-introduce-harness-engineering.md  0002-autonomous-maintenance-principles.md
docs/specs/: cuda_v8.0.md
frontend/reader/: README.md  package.json
scripts/: ingest_to_cognee.py  init_cognee_queue.py  preprocess_transcript.py  update_image_urls.py
src/: README.md  app.py  cli.py  cli_handlers.py  main.py  models.py  sync_supabase.py
src/domain/: README.md  entities.py  interfaces.py
src/infrastructure/: README.md  ai.py  audio_recorder.py  cognee.py  dashboard.py  discord.py  file_repository.py  file_validator.py  image_generator.py  image_generator_gemini_prompt.txt  image_generator_negative_prompt.txt  image_generator_prompt.txt  novelizer_prompt.txt  observability.py  preprocessor.py  process_monitor.py  repositories.py  settings.py  summarizer.py  summarizer_prompt.txt  system.py  (+2 more)
supabase/: schema.sql
tests/: conftest.py  test_process_recording.py  test_repositories.py
windows/: README.md  bootstrap.bat  run.bat
(+36 files in other folders)
