[project]
name = "vlog"
version = "0.1.0"
description = "VRChat Auto-Diary"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "numpy>=1.26.0",
    "psutil>=5.9.0",
    "faster-whisper>=0.10.0",
    "google-generativeai>=0.8.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.3",
    "supabase>=2.0.0",
    "nvidia-cublas-cu12>=12.1.3.1",
    "nvidia-cudnn-cu12>=9.1.0.70",
    "torch>=2.5.1",
    "diffusers @ git+https://github.com/huggingface/diffusers",
    "transformers>=4.46.3",
    "huggingface-hub>=0.26.2",
    "accelerate>=1.1.1",
    "sentencepiece>=0.2.0",
    "pydantic-settings>=2.12.0",
    "pillow>=12.0.0",
    "matplotlib>=3.10.8",
    "pyannote.audio>=3.1.1 ; sys_platform != 'win32'",
    "rich>=14.3.2",
]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "scripts"]

[tool.ruff.lint]
# E: pycodestyle errors
# F: Pyflakes
# I: isort (import sorting)
# N: pep8-naming
# UP: pyupgrade (modern python)
# B: flake8-bugbear (common bugs)
# S: flake8-bandit (security)
# A: flake8-builtins
# C4: flake8-comprehensions
# RET: flake8-return
# SIM: flake8-simplify
# PTH: flake8-use-pathlib
# ERA: eradicate (dead code)
# PL: Pylint
# TRY: tryceratops (exception handling check)
# RUF: Ruff-specific rules
select = [
    "E", "F", "I", "N", "UP", "B", "S", "A", "C4",
    "RET", "SIM", "PTH", "ERA", "PL", "TRY", "RUF"
]
ignore = [
    "PLR0913", # Too many arguments
    "TRY003",  # Avoid specifying long messages in exceptions
]

[tool.pyright]
include = ["src", "scripts"]
typeCheckingMode = "basic"
pythonVersion = "3.11"
reportUnusedImport = true
reportUnusedVariable = true
reportMissingTypeStubs = false

[dependency-groups]
dev = [
    "ruff>=0.14.9",
]
